tests/lean/change_tac.lean.expected.out
⊢ 2 + 1 = 3
change_tac.lean:10:2: error: tactic.change failed, given type
  2 + 2 = 3
is not definitionally equal to
  1 + 2 = 3
state:
⊢ 1 + 2 = 3
h : 2 + 1 = 3
⊢ 2 + 2 = 4
change_tac.lean:22:2: error: change-at does not support multiple locations
state:
h : 1 + 2 = 3
⊢ 2 + 2 = 4
change_tac.lean:27:2: error: change-at does not support multiple locations
state:
h : 1 + 2 = 3
⊢ 2 + 2 = 4
h : 2 + 1 = 3
⊢ 1 + 2 = 3
h : 3 = 3 + 1
⊢ 3 = 3
change_tac.lean:46:2: error: tactic.change failed, given type
  4 = 4 + 1 → 1 + 2 = 3
is not definitionally equal to
  1 + 2 = 1 + 2 + 1 → 1 + 2 = 3
state:
⊢ 1 + 2 = 1 + 2 + 1 → 1 + 2 = 3
